--- a/Desafio-5/consigna1/views/productos.handlebars
+++ b/Desafio-5/consigna1/views/productos.handlebars
@@ -13,7 +13,7 @@
     {{#each productos}}
     <tr>
         <td>{{this.title}}</td>
-        <td>{{this.precio}}</td>
+        <td>{{this.price}}</td>
         <td><img src="{{this.thumbnail}}" alt="{{this.nombre}}" style="width:50px ;"></td>
     </tr>
     {{/each}} 
