--- a/Desafio-6/views/index.hbs
+++ b/Desafio-6/views/index.hbs
@@ -7,6 +7,11 @@
     <button type="submit">Enviar</button>
   </form>
 
+ 
+<table id="show-producto">
+    
+</table>
+
 <h1>Centro de Mensajes</h1>
 
 <input type="text" name="input-email" id="input-email" placeholder="Escribe e-mail">
