--- a/Desafio-11/views/index.hbs
+++ b/Desafio-11/views/index.hbs
@@ -15,6 +15,11 @@
 <h1>Centro de Mensajes</h1>
 
 <input type="text" name="input-email" id="input-email" placeholder="Escribe e-mail">
+<input type="text" name="input-nombre" id="input-nombre" placeholder="Escribe nombre">
+<input type="text" name="input-apellido" id="input-apellido" placeholder="Escribe apellido">
+<input type="text" name="input-edad" id="input-edad" placeholder="Escribe edad">
+<input type="text" name="input-alias" id="input-alias" placeholder="Escribe alias">
+<input type="text" name="input-avatar" id="input-avatar" placeholder="Escribe avatar">
 
 <ul id="show-message"></ul>
 
