desafio'11 consigna2 first commit

--- a/Desafio-11/views/index.hbs
+++ b/Desafio-11/views/index.hbs
@@ -1,18 +1,6 @@
 
- <h1>Ingresar Producto</h1>
-  <form id="form-product">
-    <input type="text" name="product-title" id="product-title" required placeholder="title"/>
-    <input type="text" name="product-price" id="product-price" required placeholder="price"/>
-    <input type="text" name="product-thumbnail" id="product-thumbnail" required placeholder="thumbnail"/>
-    <button type="submit">Enviar</button>
-  </form>
-
- 
-<table id="show-producto">
-    
-</table>
-
-<h1>Centro de Mensajes</h1>
+<h1 >Centro de Mensajes</h1>
+<h1 id="compress"></h1>
 
 <input type="text" name="input-email" id="input-email" placeholder="Escribe e-mail">
 <input type="text" name="input-nombre" id="input-nombre" placeholder="Escribe nombre">
