--- a/Desafio-11/views/layout.hbs
+++ b/Desafio-11/views/layout.hbs
@@ -4,6 +4,7 @@
     <title>Prueba Socket.io</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script> 
   </head>
   <body>
     {{{body}}}
