--- a/Desafio-12/public/stylesheets/style.css
+++ b/Desafio-12/public/stylesheets/style.css
@@ -20,3 +20,9 @@ body {
     color:blue;
     font-weight: bold;
   }
+
+
+  .wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
