--- a/Desafio-12/views/index.hbs
+++ b/Desafio-12/views/index.hbs
@@ -1,8 +1,8 @@
 <section>
 <form id="form-logout" action="/api/logout" method="post">
-  <div >
-   Bienvenido {{this.username}}
-  <button type="submit" role="button">Logout</a>
+  <div class="wrapper">
+  <div class="row">Bienvenido {{this.username}}</div>
+  <div class="row"><button id="button-logout" type="submit" role="button">Logout</button></div>
   </div>
 </form>
 
