--- a/Desafio-13/views/login.hbs
+++ b/Desafio-13/views/login.hbs
@@ -1,7 +1,7 @@
 <h1>Iniciar sesión</h1>
 <form id="form-message" action="/api/login" method="post">
   <input type="text" name="username" id="username" placeholder="e-mail or nombre usuario">
-  <input type="text" name="password" id="password" placeholder="contraseña">
+  <input type="password" name="password" id="password" placeholder="contraseña">
   <button type="submit">Enviar</button>
 </form>
 <a href="/api/register">Registrarse</button>
