--- a/Desafio-13/views/error.hbs
+++ b/Desafio-13/views/error.hbs
@@ -1,6 +1,5 @@
-
 <section>
-<h2 class="row">Hasta Luego {{this.username}}</h2>
+<h2 class="error-message">{{this.message}}</h2>
 </section>
 
 <script>
