--- a/Desafio-13/views/register.hbs
+++ b/Desafio-13/views/register.hbs
@@ -1,7 +1,7 @@
 <h1 id="Register"></h1>
 <form id="form-message" action="/api/register" method="post">
    <input type="text" name="username" id="username" placeholder="e-mail or nombre usuario">
-   <input type="text" name="password" id="password" placeholder="contraseña">
+   <input type="password" name="password" id="password" placeholder="contraseña">
    <button type="submit">Enviar</button>
 </form>
 <a href="/api">Iniciar sesión</button>
