desafio-18 validation in register

--- a/Desafio-18/public/stylesheets/style.css
+++ b/Desafio-18/public/stylesheets/style.css
@@ -21,6 +21,11 @@ body {
     font-weight: bold;
   }
  
+  .error-message-red {
+    color:red;
+    font-weight: bold;
+  }
+
   .wrapper {
     display: grid;
     grid-template-columns: 2fr 1fr;
